2.6?
    - Modified search algorithms so LaTeX commands are removed before search. For instance, this
      means that the value "test \textit{case}" now matches the search string "test case".

2.5b
    - Added Simplified Chinese translation.
    - Added simple plugin manager.
    - Added ~/.jabref/plugins as user-specific plugin directory.
    - Added \r marker to WrapFileLinks formatter that outputs file links without expanding
      relative links.
    - Added [authorAlpha] key marker that formats authors according to the "alpha" BibTeX style.
      Patch submitted by Oliver Kopp.
    - Table sort order set by clicking and Ctrl-clicking table columns is now immediately set
      as default sort order in preferences.
    - Changed LyX pipe setting so it works whether ".in" is included or omitted.
    - Modified ISI importer so the words "of", "and" and "the" will not be capitalized in the title,
      journal or publisher fields.
    - When adding new local file link, browse dialog now appears immediately when opening file link
      editor, saving one mouse click.
    - Added "Remove all broken links" option in the resolver dialog for broken links when
      synchronizing file links.
    - Added rename option to Set/clear field dialog, to move contents from one field to another.
    - Added Back and Forward actions, for switching between recently edited BibTeX entries.
    - Added option under "Entry table" to designate fields as numeric for sorting purposes.
    - Added possibility for custom export filters to define their own name formatters.
      This is done by adding a file named "<filtername>.formatters". This file defines
      one formatter on each line, with each line containing the name of the formatter and
      the formatter definition, separated by a colon (:).
    - Added menu items for increasing/decreasing table font size, with shortcut keys Ctrl-plus and
      Ctrl-minus.